--- a/Sequence.css
+++ b/Sequence.css
@@ -138,6 +138,12 @@ body{
    margin-top: 12px;
 }
 
+.fail{
+   border: 3px solid #FF0000;
+   margin: -3px;
+   margin-top: 12px;
+}
+
 .dragActive>#standby-label{
    top: 2px;
    left: 2px;
